test-suite/tests/roundtrip/invalid/semantic/args_issue/02/via-conjure.expected-error.txt
Error running `conjure pretty`: Error:
    tests/roundtrip/invalid/semantic/args_issue/02/input.essence:2:36:
  |
2 | such that b = ([1, 2, 3] = flatten([1, 2, 3], 0))
  |                                    ^^^^^^^^^
Error: 1st arg must be a constant positive int

tests/roundtrip/invalid/semantic/args_issue/02/input.essence:2:47:
  |
2 | such that b = ([1, 2, 3] = flatten([1, 2, 3], 0))
  |                                               ^
Type error:
	Expected: [[?]]
	Got: int

